# nationstates-rs

./: Cargo.toml  LICENSE  README.md
examples/: nation.rs  region.rs  test.rs  verify.rs
src/: client.rs  errors.rs  lib.rs  nation.rs  region.rs
