[package]
name = "nationstates"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4"}
tokio = { version = "1.7.1", features = ["full"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"

[[example]]
name = "test"
path = "examples/nation.rs"
