[package]
name = "nationstates"
version = "0.1.1"
edition = "2018"
license = "MIT"
repository = "https://github.com/OwlArchipelago/nationstates-rs"
readme = "README.md"
description = "Nationstates API for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4"}
tokio = { version = "1.7.1", features = ["full"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
chrono = { version = "0.4", features = ["serde"] }
